Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16504

Regression. Folder opens, the file is selected, but it is not visible. Disrupted positioning. (Shortcut Command Prompt shortcut and the application manager).

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.14
    • None
    • 0.4.14-dev-312-gb931f643e35e6a23dbef99e785804039ea579b6a

    Description

      reactos-bootcd-0.4.14-dev-313-gf9e4d81-x86-gcc-lin-dbg.iso - Regression. Folder opens, the file is selected, but it is not visible. Disrupted positioning. (Shortcut Command Prompt shortcut and the application manager).

      reactos-bootcd-0.4.14-dev-300-gd037003-x86-gcc-lin-dbg.iso - Works correctly.

       

      Attachments

        1. Debug_20191113-0.4.14-dev-315-gbb6fece.log
          48 kB
          Start
        2. picture-cmd.png
          50 kB
          Katayama Hirofumi MZ
        3. picture-rapps.png
          47 kB
          Katayama Hirofumi MZ
        4. explorer-select-focus.patch
          2 kB
          Katayama Hirofumi MZ
        5. 0.4.14-dev-316-g986f6a4_whereIsTheProblem.webm
          424 kB
          reactosfanboy

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Start Start
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: