[BROWSEUI][SHELL32] Fix scroll to selection CORE-16504

A patch by Katayama Hirofumi MZ

The bug was unhidden by
0.4.14-dev-312-g
b931f643e35e6a23dbef99e785804039ea579b6a